fixed z-index of landing and nav

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -41,7 +41,7 @@
 /* Navigation Bar */
 .navBar {
   background-color: #045604;
-  z-index: 2;
+  z-index: 3;
 }
 a.item.navTitle.active {
   background: none !important;
